Initial checkin of OCL GDB plugin for GDB >= 7.3 - autoloaded when GDB detects load of libintelocl.so - may also be loaded manually with "source libintelocl.so-gdb.py" - set breakpoints on a specific workitem in GDB with:     'ocl-break-workitem <location> <gid_x> <gid_y> <gid_z>'
****************************************************************************
*** Because this is a GDB plugin, shipping it requires placing under GPL ***
****************************************************************************

C/R: Eli Bendersky
Personal Build: http://cvcc-fc14-01.iil.intel.com:8080/job/PCompiler_dmalea/58/

--- a/opencl-intel/backend/ocl_cpu_debugging/CMakeLists.txt
+++ b/opencl-intel/backend/ocl_cpu_debugging/CMakeLists.txt
@@ -228,3 +228,8 @@ install( TARGETS ${TARGET_NAME}
     RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION bin)
+
+# Install the (GPL'd) GDB OCL plugin. The name and location is important, as
+# GDB will auto-load it if it has the same name as a loaded shared object.
+set (GDB_PLUGIN libintelocl.so-gdb.py)
+install( FILES ${GDB_PLUGIN} DESTINATION bin)
