Implemented KernelArgumentsParser for SATEST data generator CR: Oleg, AlekseyB, AlekseyK, Yuri PreCommit: passed

--- a/opencl-intel/backend/validations/CMakeLists.txt
+++ b/opencl-intel/backend/validations/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory(PlugInNEAT)
 add_subdirectory(Unittests)
 add_subdirectory(BackEndTests)
 add_subdirectory(OCLBuilder)
+add_subdirectory(OpenCLKernelArgumentsParser)
