--- a/opencl-intel/backend/libraries/ocl_builtins/utils/TableGen/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/utils/TableGen/CMakeLists.txt
@@ -26,12 +26,14 @@ add_tablegen(
 include_directories(
   ${CMAKE_SOURCE_DIR}/backend/validations/OCLBuilder/
   ${CMAKE_SOURCE_DIR}/backend/validations/Common/
+  ${CMAKE_SOURCE_DIR}/backend/name_mangling/
   ${CMAKE_SOURCE_DIR}/cl_api
   ${CMAKE_SOURCE_DIR}/backend/dynamic_lib
   ${LLVM_MAIN_SRC_DIR}/include
 )
 
 target_link_libraries(ocl-tblgen
+  name_mangle
   LLVMSupport
   LLVMCore
   LLVMBitReader
