FIX: the hard links are on the build makes build from NFS to fail. Fixed on Linux. Still need to find a way around under Windows

--- a/opencl-intel/backend/reflection_module/CMakeLists.txt
+++ b/opencl-intel/backend/reflection_module/CMakeLists.txt
@@ -6,10 +6,18 @@ project (${TARGET_NAME})
 
 add_subdirectory(unittest)
 
-set(LINK_CMD
-  ln --force ${CMAKE_SOURCE_DIR}/backend/name_mangling/unittests/MangledNames.h
-  BuiltinList.h
-)
+if (WIN32)
+  set(LINK_CMD
+    ln --force
+    ${CMAKE_SOURCE_DIR}/backend/name_mangling/unittests/MangledNames.h
+    BuiltinList.h
+  )
+else(WIN32)
+  set(LINK_CMD
+    ln -s --force ${CMAKE_SOURCE_DIR}/backend/name_mangling/unittests/MangledNames.h
+    BuiltinList.h
+  )
+endif(WIN32)
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/BuiltinList.h
@@ -24,6 +32,7 @@ add_library(
   STATIC
   BuiltinKeeper.cpp
   BuiltinList.h
+  utils.h
 )
 
 include_directories(
