--- a/opencl-intel/backend/libraries/ocl_builtins/corei7/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/corei7/CMakeLists.txt
@@ -1,14 +1,14 @@
 if (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target ( corei7 n8 )
+	  create_target ( corei7 n8 TRUE )
 	else ()
-	  create_target ( corei7 h8 )
+	  create_target ( corei7 h8 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 else (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target ( corei7 n8 )
+	  create_target ( corei7 n8 TRUE )
 	else ()
-	  create_target ( corei7 h8 )
+	  create_target ( corei7 h8 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 endif (WIN32)
 
