--- a/opencl-intel/backend/libraries/ocl_builtins/haswell/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/haswell/CMakeLists.txt
@@ -1,13 +1,13 @@
 if (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target ( core-avx2 s9 )	
+	  create_target ( core-avx2 s9 TRUE )
 	else ()
-	  create_target ( core-avx2 l9 )
+	  create_target ( core-avx2 l9 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 else (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target ( core-avx2 s9 )	
+	  create_target ( core-avx2 s9 TRUE )
 	else ()
-	  create_target ( core-avx2 l9 )
+	  create_target ( core-avx2 l9 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 endif (WIN32)
