--- a/opencl-intel/backend/libraries/ocl_builtins/knc/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/knc/CMakeLists.txt
@@ -6,6 +6,6 @@ endif ()
 if (CMAKE_SIZEOF_VOID_P EQUAL 4)
   message (FATAL_ERROR "knc is not supported by 32bit architechtures")	
 else (CMAKE_SIZEOF_VOID_P EQUAL 4)
-  create_target ( knc b2 target-knc.td )
+  create_target ( knc b2 FALSE target-knc.td )
 endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 
