--- a/opencl-intel/backend/libraries/ocl_builtins/sandybridge/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/sandybridge/CMakeLists.txt
@@ -1,13 +1,13 @@
 if (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target (corei7-avx g9 )	
+	  create_target (corei7-avx g9 TRUE )
 	else ()
-	  create_target (corei7-avx e9 )
+	  create_target (corei7-avx e9 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 else (WIN32)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-	  create_target (corei7-avx g9 )	
+	  create_target (corei7-avx g9 TRUE )
 	else ()
-	  create_target (corei7-avx e9 )
+	  create_target (corei7-avx e9 TRUE )
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 endif (WIN32)
