Add option in Build.py to generate ATOM built-ins (with appropriate SVML). Some fixes to built-ins to enable ATOM, where there is only SSSE3.
This is the start of a Win8 ATOM support en-devour. We will continue this work according to use cases we will have.

Relevant Bugs
=============
none - Integrating Evgeny's Win8 ATOM patch.

Reviewers
=========
* omaslov
* aklishin
* efiksman
* operez

ReviewBoard Ticket
==================
1302 - Integrating Evgeny's Win8 ATOM patch.

Potential Performance Implications
==================================
* none

Tests
=====
* pre-commit
* manual build of Win8 ATOM version.
* conform12\images\kernel_image_methods\test_kernel_image_methods

--- a/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
@@ -519,6 +519,9 @@ endforeach (FILE)
 add_subdirectory (corei7)
 add_subdirectory (sandybridge)
 add_subdirectory (haswell)
+if (INCLUDE_ATOM)
+	add_subdirectory (core2)
+endif()
 if (INCLUDE_MIC_DEVICE)
   add_subdirectory (knc)
 endif()
