Adding efficient load_transpose(), transpose_store() built-in functions.
Description:
Adding efficient load_transpose(), transpose_store() built-in
functions for {char4, int4, float4} x {transpose_size_4, transpose_size_8} x {AVX, AVX2}.
This commit includes adjustment to the heuristics to avoid regressions that are cause because the heuristics chooses different vector size than it did after the new transposes were added (this part was implemented by Michael and reviewed by Ran).

ClearQuest: None

Reviewer (of vectorizer integration): Ran

ReviewBoard: None.

Pre commit: http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerReport/1387/

Performance: 

These measurements are based on the trunk.

Cyberlink on hasweel:
geomean with heuristics (vec size = 0): 1.049
geomean vec size = 4: 1.062
geomean vec size = 8: 1.194

Cyberlink on sandybridge:
geomean with heuristics (vec size = 0): 1.07
geomean vec size = 4: 1.087
geomean vec size = 8: 1.153

There is a degragation of ~10% in one Cyberlink workload (for vec size 4, 8, 0):
Laser.Laser_alpha0_Global  ticket CSSD100014361 was opened

--- a/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
@@ -467,6 +467,7 @@ list (APPEND OCL_SOURCE_FILES
   math_functions.cpp
   misc_functions.cpp
   relational_functions.cpp
+  transpose_functions.cpp
   vload_vstore_functions.cpp
   )
 
