--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -272,7 +272,7 @@ set_target_properties( OCLSamplePlugin PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/
 
 set_target_properties( tinyxml_STL PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/externals )
 
-install(DIRECTORY ${BACKEND_ROOT_DIR}/tests/MIC/satest/mic
+install(DIRECTORY ${BACKEND_ROOT_DIR}/tests/MIC/satest/mic/
     DESTINATION bin/validation/MICRegression
     PATTERN ".svn" EXCLUDE)
 
