Wrapped the entire work of the vectorizer with function pass. This can enable us modifying the vectorizer lit tests to use this pass instead of sequence passes Fixed a memory leak happens when creating the heuristics pass but the transpose size is already defined (set by the user).
Code review : Michael

Performance Implications: None.

--- a/opencl-intel/backend/vectorizer/CMakeLists.txt
+++ b/opencl-intel/backend/vectorizer/CMakeLists.txt
@@ -45,6 +45,7 @@ add_llvm_library( LLVMVectorizer
   Resolver/SpecialCaseBuiltinResolver.cpp
   VolcanoWrapper/Main.cpp
   Utils/Mangler.cpp
+  Utils/VectorizerCore.cpp
   Utils/VectorizerUtils.cpp
   Utils/IRInjection.cpp
   Utils/PrintfAdder.cpp
