*Description*: Added ShuffleCallToInst pass to Backend passes, which converts a call to shuffle function with constant mask to a shufflevector LLVM instruction to gain some performance boost. Created LIT tests for the pass in the Check_OCL_Backend_Passes suite.
*CQ*: None

*Reviewer*: Marina

*Review Board*:
http://cvcc-ubu-01.iil.intel.com/cr/r/1336/

*Testing*:
http://cvcc-fc14-01.iil.intel.com:8080/job/PCompiler_nmeraey/44/

*Performance*:
Some regressions were detected in the performance results, they turned out to be false alarms.
Also, some confirmed positive speedups up to 1.68 were detected, mainly in WOLF.RadialBlur and WOLF.Gauss workloads.

--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -229,6 +229,7 @@ set_target_properties( ProfilingInfoPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME
 set_target_properties( RelaxedPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 set_target_properties( ResolveWICall PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 set_target_properties( ShiftZeroUpperBits PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( ShuffleCallToInst PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 set_target_properties( UndefExternalFuncs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 set_target_properties( OclRecorder PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend )
 
