--- a/opencl-intel/backend/ocl_cpu_backend/passes/CMakeLists.txt
+++ b/opencl-intel/backend/ocl_cpu_backend/passes/CMakeLists.txt
@@ -13,4 +13,5 @@ add_subdirectory(ProfilingInfoPass)
 add_subdirectory(RelaxedPass)
 add_subdirectory(ResolveWICall)
 add_subdirectory(ShiftZeroUpperBits)
+add_subdirectory(ShuffleCallToInst)
 add_subdirectory(UndefExternalFuncs)
