--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -279,6 +279,7 @@ else(LLVM_BUILD_APPLE_BACKEND)
     set_target_properties( RelaxedPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
     set_target_properties( ResolveWICall PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
     set_target_properties( ShiftZeroUpperBits PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+    set_target_properties( ShuffleCallToInst PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
     set_target_properties( UndefExternalFuncs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
     if (WIN32)
