Re-factoring of passing parameters to kernel at execution phase.  * Removed the dependency on execution from preparing kernel parameters utility.  * Replace implicit kernel parameter "Executable" with "CallbackContext".  * changed order of two implicit kernel parameters: "local id buffer" and "CallbackContext".
This is first phase of re-factoring and it is needed as preparation for sharing the backend compiler with Apple.

To Be reviewed by Vlad.
http://cvcc-ubu-01.iil.intel.com/cr/r/1439/

PreCommit:
http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerReport/1530/

--- a/opencl-intel/backend/utils/CMakeLists.txt
+++ b/opencl-intel/backend/utils/CMakeLists.txt
@@ -4,6 +4,7 @@ set (OCL_UTILS_INCLUDE_FILES
     CompilationUtils.h
     CPUDetect.h
     exceptions.h
+    ExecutionContext.h
     ExplicitArgument.h
     ExplicitLocalMemArgument.h
     ExplicitGlobalMemArgument.h
